# audiobook-viz-tui

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-04-29-phase2-ui-split-design.md
src/audiobook_viz/: __init__.py  __main__.py  cli.py  colors.py  media.py  models.py  playback.py  state.py  subtitles.py  ui.py
src/audiobook_viz/ui/: __init__.py  app.py  constants.py  enums.py  modals.py  rendering.py
tests/: test_cli.py  test_media.py  test_playback.py  test_state.py  test_subtitles.py  test_ui.py
